# Sanskrit-NLP-Library

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SanskritNlpSolution.sln
.history/: .gitignore_20241116223010  .gitignore_20241116223011  .gitignore_20241116223012  .gitignore_20241116223013  .gitignore_20241116223014  .gitignore_20241116223015  .gitignore_20241116223016  .gitignore_20241116223018  .gitignore_20241116223019  .gitignore_20241116223021  .gitignore_20241116223022  .gitignore_20241116223023  .gitignore_20241120203922  .gitignore_20241120204403  .gitignore_20241120204418  .gitignore_20241120204419  .gitignore_20241120204420  .gitignore_20241120204421  .gitignore_20241120204424  CMakeLists_20241116221937.txt  CMakeLists_20241116221942.txt  CMakeLists_20241116225603.txt  README_20241116220747.md
.history/include/: transliteration_20241116221821.h  transliteration_20241116221906.cpp  unicode_support_20241116225755.h  unicode_support_20241116225822.h
.history/src/: main_20241116221625.cpp  transliteration_20241116221918.cpp  transliteration_20241116221921.cpp  transliteration_20241116221922.cpp  unicode_support_20241116221716.cpp
.history/tests/: test_transliteration_20241116221957.cpp  test_transliteration_20241116222000.cpp
SanskritNlpApp/: Program.cs  SanskritNlpApp.csproj
SanskritNlpLib/: Readme.md  SanskritNlpLib.csproj  Transliteration.cs  UnitcodeSupport.cs
SanskritNlpTests/: SanskritNlpTests.csproj  UnitTest1.cs
include/: unicode_support.h
src/: main.cpp  transliteration.cpp  unicode_support.cpp
(+2 files in other folders)
